--- a/Pipfile
+++ b/Pipfile
@@ -64,6 +64,8 @@ djangorestframework = ">=3.10.3"
 djangorestframework-simplejwt = ">=4.0.0"
 djangorestframework-camel-case = ">=1.1.2"
 djoser = ">=2.0.3"
+# opencv
+opencv-python = "*"
 
 [requires]
 python_version = "3.6"
